source/what.txt
gcc -c -O3 -g -Wall -Wextra -Wno-unused-function -Wno-unused-parameter -std=c11 -I/usr/local/include/SDL2 -D_THREAD_SAFE c_lib.c -o c_lib.o
In file included from c_lib.c:3:
./common_utils.h:518:17: warning: missing field 'vals' initializer [-Wmissing-field-initializers]
    Map map = {0};
                ^
In file included from c_lib.c:14:
In file included from ./external_libraries/audio.c:116:
./external_libraries/external/jar_xm.h:141:18: warning: comparison of integers of different signs: 'int' and 'unsigned long' [-Wsign-compare]
        for(x=0;x<2*numsamples;x++)
                ~^~~~~~~~~~~~~
./external_libraries/external/jar_xm.h:160:18: warning: comparison of integers of different signs: 'int' and 'unsigned long' [-Wsign-compare]
        for(x=0;x<2*numsamples;x++)
                ~^~~~~~~~~~~~~
./external_libraries/external/jar_xm.h:2625:43: warning: comparison of integers of different signs: 'size_t' (aka 'unsigned long') and 'int' [-Wsign-compare]
    if(!data || fread(data, 1, size, xmf) < size) {
                ~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~
In file included from c_lib.c:14:
./external_libraries/audio.c:852:21: warning: missing field 'sampleRate' initializer [-Wmissing-field-initializers]
    Wave wave = { 0 };
                    ^
./external_libraries/audio.c:902:23: warning: missing field 'source' initializer [-Wmissing-field-initializers]
    Sound sound = { 0 };
                      ^
./external_libraries/audio.c:1264:24: warning: missing field 'sampleRate' initializer [-Wmissing-field-initializers]
    Wave newWave = { 0 };
                       ^
./external_libraries/audio.c:1378:27: error: invalid operands to binary expression ('drmp3' and 'void *')
        if (music->ctxMp3 == NULL) TraceLog(LOG_WARNING, "[%s] MP3 audio file could not be opened", fileName);
            ~~~~~~~~~~~~~ ^  ~~~~
./external_libraries/audio.c:1589:30: warning: unused variable 'numSamplesFlac' [-Wunused-variable]
                unsigned int numSamplesFlac = (unsigned int)drflac_read_s16(music->ctxFlac, samplesCount*music->stream.channels, (short *)pcm);
                             ^
./external_libraries/audio.c:1597:75: error: passing 'drmp3' to parameter of incompatible type 'drmp3 *'; take the address with &
                unsigned int numSamplesMp3 = (unsigned int)drmp3_read_f32(music->ctxMp3, samplesCount*music->stream.channels, (short *)pcm);
                                                                          ^~~~~~~~~~~~~
                                                                          &
./external_libraries/external/dr_mp3.h:2603:36: note: passing argument to parameter 'pMP3' here
drmp3_uint64 drmp3_read_f32(drmp3* pMP3, drmp3_uint64 framesToRead, float* pBufferOut)
                                   ^
In file included from c_lib.c:14:
./external_libraries/audio.c:1803:30: warning: missing field 'sampleSize' initializer [-Wmissing-field-initializers]
    AudioStream stream = { 0 };
                             ^
./external_libraries/audio.c:2124:21: warning: missing field 'sampleRate' initializer [-Wmissing-field-initializers]
    Wave wave = { 0 };
                    ^
./external_libraries/audio.c:2217:21: warning: missing field 'sampleRate' initializer [-Wmissing-field-initializers]
    Wave wave = { 0 };
                    ^
11 warnings and 2 errors generated.
make: *** [c_lib.o] Error 1
